--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
+  "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "all"
+  "semi": true,
+  "trailingComma": "all",
+  "endOfLine": "auto"
 }
