--- a/package.json
+++ b/package.json
@@ -24,9 +24,19 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.0.4",
+    "@nestjs/typeorm": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "moment": "^2.29.4",
+    "mongodb": "^4.8.0",
+    "nest-winston": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.5.0",
+    "typeorm": "^0.3.7",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
